--- a/main.css
+++ b/main.css
@@ -19,3 +19,10 @@ input {
 button {
   cursor: pointer;
 }
+
+.container {
+  max-width: 1250px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
