--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  min-height: 100vh;
   font-family: "Poppins", sans-serif;
+  background-color: #333;
 }
 
 button,
@@ -20,9 +20,21 @@ button {
   cursor: pointer;
 }
 
+h1 {
+  text-transform: uppercase;
+  color: #fff;
+}
+
 .container {
   max-width: 1250px;
   width: 100%;
   margin: 0 auto;
   margin-top: 2rem;
+}
+
+.container__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
