--- a/main.css
+++ b/main.css
@@ -38,3 +38,12 @@ h1 {
   align-items: center;
   gap: 2rem;
 }
+
+.container__form {
+  display: flex;
+  width: 100%;
+  background-color: red;
+}
+.container__form input {
+    width: 100%;
+}
