--- a/main.css
+++ b/main.css
@@ -7,14 +7,14 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #333;
+  background-color: #081f37;
 }
 
 button,
 input {
   border: 0;
   outline: 0;
-  padding: 0.5rem 2rem;
+  padding: 0.75rem 2.5rem;
 }
 
 input {
@@ -48,8 +48,26 @@ h1 {
   gap: 2rem;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.header > div:last-child {
+  font-size: 2rem;
+  border: 1px solid #5fc9f3;
+  color: #5fc9f3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px #5fc9f3;
+  cursor: pointer;
+}
+
 .container__form {
   display: flex;
   width: 100%;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
 }
