--- a/main.css
+++ b/main.css
@@ -21,6 +21,11 @@ input {
   width: 100%;
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
+  background: transparent;
+}
+
+input:focus {
+  border-color: #5fc9f3;
 }
 
 button {
@@ -51,7 +56,7 @@ h1 {
 .header {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .header > div:last-child {
@@ -69,9 +74,25 @@ h1 {
 
 .container__form {
   display: flex;
+  border-radius: 0.5rem;
+  border: 1px solid #fff;
   width: 100%;
 }
 
 .search-btn {
   font-size: 1.25rem;
+  color: #1e549f;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .header {
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+}
+
+@media only screen and (max-width: 28.125rem) {
+    h1 {
+        font-size: 1.5rem;
+    }
 }
