--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@ input {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   background: transparent;
+  color: #fff;
+  font-weight: 550;
+  font-size: 1.25rem;
 }
 
 input:focus {
