--- a/main.css
+++ b/main.css
@@ -111,15 +111,14 @@ h1 {
 .github-profile {
   position: relative;
   background-color: #fff;
-  max-width: 450px;
+  max-width: 550px;
   width: 100%;
   border-radius: 0.5rem;
-  padding: 1rem;
   box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 16px;
+  gap: 2rem;
 }
 
 .github-profile a {
@@ -144,6 +143,23 @@ h1 {
   background-color: #333;
   color: #fff;
   box-shadow: none;
+}
+
+.user-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  box-shadow: 0 4px 7px #081f37;
+  padding: 0.5rem 0;
+}
+
+.user-details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  justify-content: space-between;
 }
 
 .avatar {
