--- a/main.css
+++ b/main.css
@@ -151,21 +151,14 @@ h1 {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
-  box-shadow: 0 4px 7px #081f37;
-  padding: 0.5rem 0;
+  margin: 1rem 0;
 }
 
-.user-details {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  justify-content: space-between;
-}
 
 .avatar {
   width: 200px;
   height: auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.9);
   height: auto;
   border-radius: 50%;
 }
@@ -175,4 +168,11 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (max-width: 37.5rem) {
+  .user-container {
+    flex-direction: column;
+    border-bottom: 1px solid #ccc;
+  }
 }
