--- a/main.css
+++ b/main.css
@@ -115,7 +115,7 @@ h1 {
   width: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
-  display: flex;
+  display: none;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
@@ -152,8 +152,8 @@ h1 {
   justify-content: space-between;
   gap: 1rem;
   margin: 1rem 0;
+  color: #081f37;
 }
-
 
 .avatar {
   width: 200px;
@@ -170,7 +170,38 @@ h1 {
   justify-content: center;
 }
 
+.user-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.user-details > .user-data-item {
+  display: flex;
+  align-items: center;
+
+  gap: 0.5rem;
+}
+
+.user-details > .user-data-item > div:first-child {
+  font-weight: 600;
+  font-size: 1.25rem;
+  color: #081f37;
+}
+
+.user-details > .user-data-item > div:last-child {
+  font-size: 1.25rem;
+}
+
 @media only screen and (max-width: 37.5rem) {
+  body {
+    min-height: 100vh;
+  }
+  .github-profile {
+    width: 80%;
+    margin: 1.5rem 0;
+  }
   .user-container {
     flex-direction: column;
     border-bottom: 1px solid #ccc;
